src/parse/snapshots/camello__parse__tests__bitwise_binds_looser_than_comparison.snap
---
source: src/parse/tests.rs
assertion_line: 118
expression: "tree(\"$a & $b == $c;\\n\")"
---
ROOT
  EXPR_STMT
    LIST_EXPR
      BINARY_EXPR
        SCALAR_VAR
          `$` "$"
          identifier "a"
        `&` "&"
        BINARY_EXPR
          SCALAR_VAR
            `$` "$"
            identifier "b"
          `==` "=="
          SCALAR_VAR
            `$` "$"
            identifier "c"
    `;` ";"
