src/parse/snapshots/camello__parse__tests__declarations_get_their_own_statement_kind.snap
---
source: src/parse/tests.rs
assertion_line: 71
expression: "tree(\"my ($a, $b) = @_;\\n\")"
---
ROOT
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            `(` "("
            LIST_EXPR
              SCALAR_VAR
                `$` "$"
                identifier "a"
              `,` ","
              SCALAR_VAR
                `$` "$"
                identifier "b"
            `)` ")"
        `=` "="
        ARRAY_VAR
          `@` "@"
          identifier "_"
    `;` ";"
