src/parse/snapshots/camello__parse__tests__expression_statements_are_always_wrapped.snap
---
source: src/parse/tests.rs
assertion_line: 66
expression: "tree(\"$x = 1;\\nfoo();\\n\")"
---
ROOT
  EXPR_STMT
    LIST_EXPR
      ASSIGN_EXPR
        SCALAR_VAR
          `$` "$"
          identifier "x"
        `=` "="
        LITERAL
          number "1"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "foo"
        ARG_LIST
          `(` "("
          LIST_EXPR
          `)` ")"
    `;` ";"
